futures/testcrate/ui/nested.stderr
error[E0727]: `async` generators are not yet supported
  --> $DIR/nested.rs:10:13
   |
10 |             yield i * i;
   |             ^^^^^^^^^^^

error: aborting due to previous error

